Secret key Removed

--- a/html/contact.html
+++ b/html/contact.html
@@ -162,7 +162,7 @@ Hyderabad, Telangana 500 029</strong>
         <h4 class="subtitle-2">Reach Us</h4>
         <div class="spacer-mini"></div>
        	<div id="map1" class="google-map " style="height:400px;"></div>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7iLsjY72WDuvj2j_HZ2VG8s40lNzvqqc&callback=mapinitialize1"
+        <script src="https://maps.googleapis.com/maps/api/js?key=&callback=mapinitialize1"
     async defer></script>
         <script type="text/javascript">
 			function mapinitialize1() {
